2009-12-01 Alexandru csete <oz9aec at gmail.com>

    * src/config-keys.h:
    * src/sat-cfg.[ch]:
    Added configuration keys for GtkEventList. Curently only refresh rate is
    configurable.

    * src/gtk-sat-list.c:
    Changed some field alignments.


2009-11-30 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module.c:
    Include support for GtkEventList views.

    * src/gtk-event-list.[ch]:
    First functional version.


2009-11-29 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-event-list.[ch]:
    Added files containing new view listing upcoming events.

    * src/gtk-sat-module.[ch]:
    Use new GtkEventList view.


2009-11-22 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-cfg.c:
    Minor formatting fixes.

    * src/sat-pref-layout.c:
    First working version of the new layout configurator.

    * src/gtk-polar-view.c
    * src/gtk-sat-map.c:
    Changed default sized to allow scaling down to 100x100 grid cell size.


2009-11-19 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module.[ch]:
    * src/gtk-sat-module-popup.c:
    * src/menuibar.c:
    * src/mod-mgr.c:
    Implemented new grid-based layout engine for GtkSatModule
    (engine only, config is still TBD).


2009-11-18 Alexandru Csete <oz9aec at gmail.com>

    * src/config-keys.h:
    * src/sat-cfg.[ch]:
    Added config key for new GRID layout.

    * src/sat-info.c:
    Pack transponder list into a scrolled window to prevent long transponder
    lists from resizing the satellite info dialog.

    * src/gtk-single-sat.c:
    Changed satellite selector to list satellites in the main pop-up menu
    instead of a submbenu (fewer mouse clicks).


2009-11-06 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    * src/gtk-rot-ctrl.c:
    * src/main.c:
    * win32/Makefile:
    * win32/build-config.h:
    * win32/config.mk:
    * win32/gpredict.exe.manifest:
    * win32/gpredict.rc: